force-app/main/default/objects/Leave_Type_Policy__mdt/Leave_Type_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Leave Type Policy</label>
    <pluralLabel>Leave Type Policies</pluralLabel>
</CustomObject>