force-app/main/default/objects/Leave_Type_Policy__mdt/fields/Accrual_Method__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Method__c</fullName>
    <description>How entitlement becomes available. Monthly accrues through the year; Upfront grants in full; Anniversary defers to Refresh_Leave_Rule__mdt; None means no entitlement is tracked.</description>
    <label>Accrual Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Anniversary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>