force-app/main/default/objects/Leave_Type_Policy__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Inactive rows are ignored by the balance engine.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>