force-app/main/default/objects/Leave_Type_Policy__mdt/fields/Counts_Toward_LWOP_Check__c.field-meta.xml
<CustomField>
    <fullName>Counts_Toward_LWOP_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Counts Toward LWOP Check</label>
    <type>Checkbox</type>
</CustomField>