force-app/main/default/objects/Leave_Type_Policy__mdt/fields/Deducts_Balance__c.field-meta.xml
<CustomField>
    <fullName>Deducts_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Replaces the hardcoded NON_DEDUCTING_TYPES set in ApplicationItemTriggerLogic. False means the request is recorded but moves no balance.</description>
    <label>Deducts Balance</label>
    <type>Checkbox</type>
</CustomField>