force-app/main/default/objects/Leave_Type_Policy__mdt/fields/Document_Required_From_Days__c.field-meta.xml
<CustomField>
    <fullName>Document_Required_From_Days__c</fullName>
    <description>LEAVE-42. The day count at which a supporting document must be attached before the request can be submitted for approval. Blank means never required; 0 means always, including a half day. Measured against Leave_Days__c, which counts working days, so Friday to Monday is two days and needs no certificate.

Judged per record. A request that LeaveSplitService shortens is measured on the days it is left holding, not on what was originally asked for - see LeaveDocumentPolicy for what that permits.</description>
    <label>Document Required From Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>