force-app/main/default/objects/Leave_Type_Policy__mdt/fields/Entitlement_Days__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Days__c</fullName>
    <description>Days granted per reset period. Left blank where entitlement is dynamic - Refreshment Leave defers to Refresh_Leave_Rule__mdt.</description>
    <label>Entitlement Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>