force-app/main/default/objects/Leave_Type_Policy__mdt/fields/Grants_On_Use__c.field-meta.xml
<CustomField>
    <fullName>Grants_On_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The type has no annual pool to draw down - it is an entitlement per occasion. Approval raises Entitlement_Days__c by the days taken, so Available stays at zero and the row becomes an honest count of what has been used rather than reading negative. Replaces the hardcoded Unpaid leave check in ApplicationItemTriggerLogic. Requires Deducts_Balance__c, or nothing reaches the grant at all. Must NOT be combined with Overflow_To__c: a type with nothing to run short of cannot be split, and LeaveSplitService would convert every request straight to the type it overflows into. It is also what makes a type safe as the END of a chain, since it can absorb any remainder. Must not be combined with Monthly accrual either, which caps Accrued_To_Date__c below the entitlement this writes.</description>
    <label>Grants On Use</label>
    <type>Checkbox</type>
</CustomField>