force-app/main/default/objects/Leave_Type_Policy__mdt/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <description>Must match the ApplicationItem__c.Request_Type__c picklist API value EXACTLY. Apex matches on this string.</description>
    <label>Leave Type</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>