force-app/main/default/objects/Leave_Type_Policy__mdt/fields/Locked_During_Probation__c.field-meta.xml
<CustomField>
    <fullName>Locked_During_Probation__c</fullName>
    <description>True for Annual and Refreshment only. Sick and statutory leave stay available during probation - Thai labour law mandates paid sick leave regardless.</description>
    <label>Locked During Probation</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>