force-app/main/default/objects/Leave_Type_Policy__mdt/fields/Max_Days_Per_Request__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_Per_Request__c</fullName>
    <description>LEAVE-42. The most one request of this type may cover. Blank means uncapped, which is every type but Personal leave.

Enforced against both Leave_Days__c and the calendar span. The span check is what stops a Saturday-to-Sunday request slipping through: it counts zero working days, so the day count alone would read it as within any cap.</description>
    <label>Max Days Per Request</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>