force-app/main/default/objects/Leave_Type_Policy__mdt/fields/Overflow_To__c.field-meta.xml
<CustomField>
    <fullName>Overflow_To__c</fullName>
    <description>The Leave Type to try next when this one runs out of balance. Refresh Leave overflows to Annual leave; Annual, Sick and Personal leave overflow to Unpaid leave. Left blank the type never splits - which is right for Unpaid leave, the end of every chain, and for the statutory types that grant their entitlement as it is used. Must name a Leave Type that has its own active policy row.</description>
    <label>Overflow To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>