force-app/main/default/objects/Leave_Type_Policy__mdt/fields/Reset_Basis__c.field-meta.xml
<CustomField>
    <fullName>Reset_Basis__c</fullName>
    <description>When the balance resets. Drives the Leave_Year__c key on Leave_Balance__c.</description>
    <label>Reset Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calendar Year</fullName>
            </value>
            <value>
                <fullName>Anniversary</fullName>
            </value>
            <value>
                <fullName>Per Occurrence</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>