force-app/main/default/objects/Leave_Type_Policy__mdt/fields/Show_On_Balance_Page__c.field-meta.xml
<CustomField>
    <fullName>Show_On_Balance_Page__c</fullName>
    <description>Controls visibility on the Leave Balance page. False for types that are configured but not displayed, e.g. Maternity leave.</description>
    <label>Show On Balance Page</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>